# CanOpen-Project

./: CMakeLists.txt  PCANBasic.h  README.md  advancedcommanddialog.cpp  advancedcommanddialog.h  advanceddialog.cpp  advanceddialog.h  advanceddialog.ui  atlstr.h  calibratePopup.ui  calibrationPopup.ui  calibrationpopup.cpp  calibrationpopup.h  carddelegate.cpp  carddelegate.h  cardmodel.cpp  cardmodel.h  commanddialog.cpp  commanddialog.h  commanddialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  connectpopup.cpp  connectpopup.h  connectpopup.ui  filterconfig.cpp  filterconfig.h  filterconfig.ui  globals.cpp  globals.h  globaltimer.cpp  globaltimer.h  loadcell.cpp  loadcell.h  loadcellmanager.cpp  loadcellmanager.h  main.cpp  mainwindow.cpp  mainwindow.cpp~RF4ba2608.TMP  (+9 more)
style/: material-blue.qss
